acid/k8s/devops-training/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-training
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-training
  template:
    metadata:
      labels:
        app: devops-training
    spec:
      containers:
        - name: devops-training
          image: walidbensmida/devops-training:v17
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 120
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 200
            periodSeconds: 20
        - name: busybox
          image: busybox
          command: ["sleep", "3600"]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "50m"
              memory: "64Mi"
